<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        style="@style/numberEntry"
        android:text="@string/zero"
        android:hint="@string/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/divideButton"/>

	<Button
		android:id="@+id/clearButton"
		app:layout_constraintEnd_toEndOf="@id/button9"
		app:layout_constraintStart_toStartOf="@id/button7"
		app:layout_constraintTop_toTopOf="@id/divideButton"
		app:layout_constraintBottom_toBottomOf="@id/divideButton"
		style="@style/ButtonIndividual"
		android:layout_width="0dp"
		android:text="@string/clear"
		/>
	<Button
		android:id="@+id/divideButton"
		app:layout_constraintStart_toStartOf="@id/multiplyButton"
		app:layout_constraintEnd_toEndOf="@id/multiplyButton"
		app:layout_constraintTop_toBottomOf="@id/editText"
		app:layout_constraintBottom_toTopOf="@id/multiplyButton"
		style="@style/ButtonIndividual"
		android:text="@string/div" />
	<Button
		android:id="@+id/button7"
		android:layout_marginStart="@dimen/buttonMargin"
		android:layout_marginEnd="@dimen/buttonMargin"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/button8"
		app:layout_constraintTop_toTopOf="@id/button8"
		app:layout_constraintBottom_toBottomOf="@id/button9"
		style="@style/ButtonIndividual"
		android:text="@string/seven" />
	<Button
		android:id="@+id/button8"
		android:layout_marginStart="@dimen/buttonMargin"
		android:layout_marginEnd="@dimen/buttonMargin"
		app:layout_constraintStart_toEndOf="@id/button7"
		app:layout_constraintEnd_toStartOf="@id/button9"
		app:layout_constraintTop_toTopOf="@id/button9"
		app:layout_constraintBottom_toBottomOf="@id/button9"
		style="@style/ButtonIndividual"
		android:text="@string/eight" />
	<Button
		android:id="@+id/button9"
		android:layout_marginStart="@dimen/buttonMargin"
		android:layout_marginEnd="@dimen/buttonMargin"
		app:layout_constraintStart_toEndOf="@id/button8"
		app:layout_constraintEnd_toStartOf="@id/multiplyButton"
		app:layout_constraintTop_toTopOf="@id/multiplyButton"
		app:layout_constraintBottom_toBottomOf="@id/multiplyButton"
		style="@style/ButtonIndividual"
		android:text="@string/nine" />
	<Button
		android:id="@+id/multiplyButton"
		android:layout_marginStart="@dimen/buttonMargin"
		android:layout_marginEnd="@dimen/buttonMargin"
		app:layout_constraintStart_toEndOf="@id/button9"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/divideButton"
		app:layout_constraintBottom_toTopOf="@id/subtractButton"
		style="@style/ButtonIndividual"
		android:text="@string/times" />
	<Button
		android:id="@+id/button4"
		app:layout_constraintStart_toStartOf="@id/button7"
		app:layout_constraintEnd_toEndOf="@id/button7"
		app:layout_constraintTop_toTopOf="@id/subtractButton"
		app:layout_constraintBottom_toBottomOf="@id/subtractButton"
		style="@style/ButtonIndividual"
		android:text="@string/four" />
	<Button
		android:id="@+id/button5"
		app:layout_constraintStart_toStartOf="@id/button8"
		app:layout_constraintEnd_toEndOf="@id/button8"
		app:layout_constraintTop_toTopOf="@id/subtractButton"
		app:layout_constraintBottom_toBottomOf="@id/subtractButton"
		style="@style/ButtonIndividual"
		android:text="@string/five" />
	<Button
		android:id="@+id/button6"
		app:layout_constraintStart_toStartOf="@id/button9"
		app:layout_constraintEnd_toEndOf="@id/button9"
		app:layout_constraintTop_toTopOf="@id/subtractButton"
		app:layout_constraintBottom_toBottomOf="@id/subtractButton"
		style="@style/ButtonIndividual"
		android:text="@string/six" />
	<Button
		android:id="@+id/subtractButton"
		app:layout_constraintStart_toStartOf="@id/multiplyButton"
		app:layout_constraintEnd_toEndOf="@id/multiplyButton"
		app:layout_constraintTop_toBottomOf="@id/multiplyButton"
		app:layout_constraintBottom_toTopOf="@id/addButton"
		style="@style/ButtonIndividual"
		android:text="@string/min" />
	<Button
		android:id="@+id/button1"
		app:layout_constraintStart_toStartOf="@id/button4"
		app:layout_constraintEnd_toEndOf="@id/button4"
		app:layout_constraintTop_toTopOf="@id/button2"
		app:layout_constraintBottom_toBottomOf="@id/button2"
		style="@style/ButtonIndividual"
		android:text="@string/one"/>
	<Button
		android:id="@+id/button2"
		app:layout_constraintStart_toStartOf="@id/button5"
		app:layout_constraintEnd_toEndOf="@id/button5"
		app:layout_constraintTop_toTopOf="@id/button3"
		app:layout_constraintBottom_toBottomOf="@id/button3"
		style="@style/ButtonIndividual"
		android:text="@string/two" />
	<Button
		android:id="@+id/button3"
		app:layout_constraintStart_toStartOf="@id/button6"
		app:layout_constraintEnd_toEndOf="@id/button6"
		app:layout_constraintTop_toTopOf="@id/addButton"
		app:layout_constraintBottom_toBottomOf="@id/addButton"
		style="@style/ButtonIndividual"
		android:text="@string/three" />
	<Button
		android:id="@+id/addButton"
		app:layout_constraintStart_toStartOf="@id/subtractButton"
		app:layout_constraintEnd_toEndOf="@id/subtractButton"
		app:layout_constraintTop_toBottomOf="@id/subtractButton"
		app:layout_constraintBottom_toTopOf="@id/equalButton"
		style="@style/ButtonIndividual"
		android:text="@string/plus" />
	<Button
		android:id="@+id/button0"
		android:layout_width="0dp"
		app:layout_constraintStart_toStartOf="@id/button1"
		app:layout_constraintEnd_toEndOf="@id/button2"
		app:layout_constraintTop_toTopOf="@id/dotButton"
		app:layout_constraintBottom_toBottomOf="@id/dotButton"
		style="@style/ButtonIndividual"
		android:text="@string/zero" />
	<Button
		android:id="@+id/dotButton"
		app:layout_constraintStart_toStartOf="@id/button3"
		app:layout_constraintEnd_toEndOf="@id/button3"
		app:layout_constraintTop_toTopOf="@id/equalButton"
		app:layout_constraintBottom_toBottomOf="@id/equalButton"
		style="@style/ButtonIndividual"
		android:text="@string/dot" />
	<Button
		android:id="@+id/equalButton"
		app:layout_constraintStart_toStartOf="@id/addButton"
		app:layout_constraintEnd_toEndOf="@id/addButton"
		app:layout_constraintTop_toBottomOf="@id/addButton"
		app:layout_constraintBottom_toBottomOf="parent"
		style="@style/ButtonIndividual"
		android:text="@string/equals" />

</androidx.constraintlayout.widget.ConstraintLayout>